--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
   "name": "nodejs-hw",
   "version": "1.0.0",
-  "description": "",
+  "description": "Homework 01 Express",
   "type": "module",
-  "main": "index.js",
+  "main": "src/server.js",
   "scripts": {
     "dev": "nodemon src/server.js",
     "start": "node src/server.js"
@@ -26,10 +26,9 @@
     "nodemon": "^3.1.11"
   },
   "dependencies": {
-    "axios": "^1.13.2",
     "cors": "^2.8.5",
     "dotenv": "^17.2.3",
-    "express": "^5.1.0",
+    "express": "^4.19.2",
     "pino-http": "^11.0.0",
     "pino-pretty": "^13.1.2"
   }
